--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,20 @@ body {
 }
 
 .center {
-	margin: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	position: absolute;
+	margin: 0;
 	top: 50%;
 	left: 50%;
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 }
 
 .img {
 	width: 100%;
-	border-radius: 12, 12px, 0, 0;
+	border-radius: 12px, 12px, 0, 0;
 }
 
 .item {
@@ -32,12 +32,12 @@ body {
 	overflow: hidden;
 } 
 
-.descriptionText {
+.description-text {
 	margin: 1em;
 	font-size: 1.5em;
 }
 
-.button {
+.btn {
 	background-color: cornflowerblue;
 	border: none;
 	color: white;
